tests/fixtures/invalid/mutation_without_mut.incn
def foo() -> Unit:
    x = 1
    x = 2
